# zensical-polka

./: .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruff.toml  .rustfmt.toml  Cargo.toml  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: index.md
docs/assets/stylesheets/: extra.css
python/bridge/: __init__.py  hooks.py
python/hooks/: __init__.py  hooks.py  hooks.pyi
src/: lib.rs
