[package]
name = "hooks"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
resolver = "3"

[lib]
name = "hooks"
crate-type = ["cdylib"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
markdown-it = "0.6.1"
polka = { git = "https://github.com/annaghi/polka.git", branch = "main" }
# polka = { path = "../polka" }

[dependencies.pyo3]
version = "0.28.2"
features = ["extension-module", "abi3-py312"]
