[build-system]
requires = ["maturin>=1.12.6,<2.0.0"]
build-backend = "maturin"

[project]
name = "zensical-polka"
requires-python = ">=3.12,<3.15"
version = "0.0.0"

[dependency-groups]
dev = ["maturin>=1.12.6,<2.0.0", "prek>=0.3.5,<1.0.0", "zensical>=0.0.27"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
